<resources>
    <string name="roboto_font">fonts/Roboto-Regular.ttf</string>
    <string name="roboto_thin">fonts/Roboto-Thin.ttf</string>
    <string name="roboto_med">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="noto_sans">fonts/NotoSans-Regular.ttf</string>


    <string name="app_name">Scanbee</string>
    <string name="duplicacy">DUPLICACY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scanbee">SCANBEE</string>
    <string name="scanbeeMoto">Intellifying retail stores</string>
    <string name="scanning">Shop</string>
    <string name="cart_item">Cart</string>
    <string name="payment">Payment</string>
    <string name="analytics">Daily Analysis</string>
    <string name="invoice">Invoice</string>
    <string name="tool_bar_item_title1">delete image</string>
    <string name="tool_bar_item_title">cart image</string>
    <string name="toolbar_del_img">delete</string>
    <string name="all_press_news">Item1</string>
    <string name="art_entertainment">Item2</string>
    <string name="automotive">AutoMotive</string>
    <string name="cart_value">CART VALUE</string>
    <string name="tax">TAX</string>
    <string name="discount">DISCOUNT</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_play">There is no network connection available. Please try again.</string>
    <string name="some_thing_went_wrong">Some went wrong. Please restart your app again</string>
    <string name="no_rasp_hub">Please check Raspberry Hub Power and internet connectivity</string>
    <string name="dup_order">Oops! sounds like a duplicate order scan and try again</string>
    <string name="empty_cart">Seems like your cart is empty. Would you like to add more products ?</string>
    <string name="valid_ph">Provide a valid Mobile number</string>
    <string name="new_order">New Order</string>
    <string name="unp_error">Enter Username and Password</string>
    <string name="please_wait">Please Wait..</string>
    <string name="Rs">\u20B9</string>
    <string name="sales">Sales</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_no">Customer Phone Number</string>
    <string name="avg_order_time">Average order time</string>
    <string name="order_id">ORDER ID</string>
    <string name="items_scanned">ITEMS SCANNED</string>
    <string name="scanning_data">Scanning Items...</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="amount_paid">Amount to be Paid</string>
    <string name="amount_paid_post">Amount Paid</string>
    <string name="credits">Store Credits</string>
    <string name="cust_card">Card number</string>
    <string name="cust_expiry">Expiry (MM/YYYY)</string>
    <string name="cust_name">Customer Name</string>
    <string name="cust_cvv">CVV</string>
    <string name="pay_cash">Take cash from buyer</string>
    <string name="p_cash">Cash</string>
    <string name="p_credit">Credit</string>
    <string name="p_card">Card</string>
    <string name="add_credit">Add to buyer credits</string>
    <string name="cont_invoice">Pay Now</string>
    <string name="print_invoice">SMS invoice</string>
    <string name="share_invoice">Share invoice</string>
    <string name="ok">ok</string>
    <string name="skip">skip</string>
    <string name="call">call</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="try_again">Try again</string>
    <string name="cancel_order">Do you want to cancel current order ?</string>
    <string name="load_prod">Fetching product data</string>
    <string name="pay_prod">Fetching payment details</string>
    <string name="cust_info">Fetching Customer details</string>
    <string name="update_cart">Fetching Updated Cart</string>
    <string name="cancel_order_toast">Cancelling order</string>
    <string name="cancelled_order">Order Cancelled</string>
    <string name="lang_change">Language Changed to</string>
    <string name="sold_prod">Products Sold</string>
    <string name="load_logging">Logging in</string>
    <string name="logout">Logging out..</string>
    <string name="not_allowed">Operation not allowed</string>
    <string name="item_removed">removed</string>
    <string name="rasp_ip">Enter Raspberry IP</string>
    <string name="order_type_hint">Order Type</string>
    <string name="helpline">9391734766</string>
    <string name="trending">#Trends</string>
    <string name="shop">Shop</string>
    <string name="order">Orders</string>
    <string name="customer">Customers</string>
    <string name="inventory">Inventory</string>
    <string name="analysis">Analytics</string>
    <string name="settings">Settings</string>
    <string name="help">Ask Scanbee</string>
    <string name="helphash">#AskScanbee</string>
    <string name="lang">Language</string>
    <string name="hindi">हिंदी</string>
    <string name="english">English</string>
    <string name="pending_shop">Pending in shop</string>
    <string name="pay_in_cash">Pay in cash</string>
    <string name="pay_in_credit">Pay in cash</string>
    <string name="need_help">Need help? call us at</string>
    <string name="charge">Charge</string>
    <string name="no_cust">No customer found</string>


    <string name="nunito_regular">fonts/Nunito-Regular.ttf</string>
    <string name="nunito_medium">fonts/Nunito-Medium.ttf</string>
    <string name="nunito_semibold">fonts/Nunito-SemiBold.ttf</string>
    <string name="nunito_light">fonts/Nunito-Light.ttf</string>
    <string name="nunito_extralight">fonts/Nunito-ExtraLight.ttf</string>
    <string name="mont_light">fonts/Montserrat-Light.otf</string>



    <string name="proceed_payment">Proceed to payment</string>
</resources>