<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityRoot"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/splash"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/vbig_icon"
        android:layout_height="@dimen/vbig_icon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sb_icon"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/row_item_margin"/>

    <TextView
        android:id="@+id/scanbeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/icon_text"
        android:layout_below="@id/logo"
        android:text="@string/scanbee" />

    <TextView
        android:id="@+id/scanbeeSubtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanbeeName"
        android:layout_centerHorizontal="true"
        android:textColor="@color/app_green"
        android:layout_marginTop="@dimen/body_margin"
        android:textSize="@dimen/body_caption"
        android:text="@string/scanbeeMoto" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:layout_below="@id/scanbeeSubtext"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/body_caption"
        android:layout_marginLeft="@dimen/top_margin"
        android:layout_marginRight="@dimen/top_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginBottom="@dimen/row_item_margin"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/gray_light"
        app:met_primaryColor="@color/app_color"
        app:met_textColor="@color/white"
        app:met_floatingLabelTextColor="@color/gray_light"
        app:met_typeface="fonts/NotoSans-Regular.ttf"
        app:met_accentTypeface="fonts/NotoSans-Regular.ttf"
        app:met_errorColor="@color/app_red"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:layout_below="@id/userNameET"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/body_caption"
        android:layout_marginLeft="@dimen/top_margin"
        android:layout_marginRight="@dimen/top_margin"
        android:layout_marginBottom="@dimen/top_margin"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/gray_light"
        app:met_primaryColor="@color/app_color"
        app:met_textColor="@color/white"
        app:met_floatingLabelTextColor="@color/gray_light"
        app:met_typeface="fonts/NotoSans-Regular.ttf"
        app:met_accentTypeface="fonts/NotoSans-Regular.ttf"
        app:met_errorColor="@color/app_red"
        app:met_floatingLabel="highlight" />

    <Button
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:layout_below="@id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text"
        android:background="@drawable/button_app_color"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/loginHelp"
        android:layout_below="@id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/app_green"
        android:textSize="@dimen/body_caption"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/side_margin"
        android:text="@string/helphash"/>

</RelativeLayout>