<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ipAddressET"
        android:hint="@string/rasp_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="text"
        android:textSize="@dimen/body_caption"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/top_margin"
        android:layout_marginRight="@dimen/top_margin"
        app:met_textColorHint="@color/app_color"
        app:met_underlineColor="@color/gray_light"
        app:met_primaryColor="@color/app_color"
        app:met_textColor="@color/app_green"
        app:met_floatingLabelTextColor="@color/gray_light"
        app:met_typeface="fonts/NotoSans-Regular.ttf"
        app:met_accentTypeface="fonts/NotoSans-Regular.ttf"
        app:met_errorColor="@color/app_red"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/order_type"
        android:hint="@string/order_type_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:layout_below="@id/ipAddressET"
        android:inputType="text"
        android:textSize="@dimen/body_caption"
        android:layout_marginTop="@dimen/row_item_margin"
        android:layout_marginLeft="@dimen/top_margin"
        android:layout_marginRight="@dimen/top_margin"
        android:layout_marginBottom="@dimen/row_item_margin"
        app:met_textColorHint="@color/app_color"
        app:met_underlineColor="@color/gray_light"
        app:met_primaryColor="@color/app_color"
        app:met_textColor="@color/app_green"
        app:met_floatingLabelTextColor="@color/gray_light"
        app:met_typeface="fonts/NotoSans-Regular.ttf"
        app:met_accentTypeface="fonts/NotoSans-Regular.ttf"
        app:met_errorColor="@color/app_red"
        app:met_floatingLabel="highlight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/row_item_margin"
        android:layout_marginBottom="@dimen/top_margin"
        android:gravity="center"
        android:layout_below="@id/order_type">

        <ImageView
            android:layout_width="@dimen/small_icon"
            android:layout_height="@dimen/small_icon"
            android:layout_marginRight="@dimen/top_margin"
            android:src="@drawable/flag" />

        <TextView
            android:id="@+id/HindiBtnBtn"
            android:text="@string/hindi"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text"
            android:padding="@dimen/row_margin"
            android:paddingLeft="@dimen/elem_margin"
            android:paddingRight="@dimen/elem_margin"
            android:background="@drawable/button_gray_color"
            android:layout_marginRight="@dimen/side_margin"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/EnglishBtnBtn"
            android:text="@string/english"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/row_margin"
            android:background="@drawable/button_gray_color"
            android:textSize="@dimen/button_text"
            android:textColor="@color/white"/>

    </LinearLayout>
    <Button
        android:id="@+id/saveBtn"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/button_text"
        android:background="@drawable/button_app_color"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin"
        android:textColor="@color/white"/>

</LinearLayout>
</ScrollView>