<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayoutWrongDialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@null"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp">
    <!--<com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phoneNoET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textSize="@dimen/body_caption"
        android:paddingLeft="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/gray_light"
        app:met_primaryColor="@color/app_color"
        app:met_textColor="@color/black"
        app:met_floatingLabelTextColor="@color/gray_light"
        app:met_typeface="fonts/NotoSans-Regular.ttf"
        app:met_accentTypeface="fonts/NotoSans-Regular.ttf"
        app:met_errorColor="@color/app_red"
        app:met_floatingLabel="highlight" />-->
        <EditText
            android:id="@+id/phoneNoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/layoutbtn"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textSize="@dimen/button_text"
                android:background="@drawable/button_blue_color"
                android:paddingLeft="@dimen/elem_margin"
                android:paddingRight="@dimen/elem_margin"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"
                />
            <Button
                android:id="@+id/skipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textAllCaps="true"
                android:textSize="@dimen/button_text"
                android:background="@drawable/button_blue_color"
                android:paddingLeft="@dimen/elem_margin"
                android:paddingRight="@dimen/elem_margin"
                android:textColor="@color/white" />
        </LinearLayout>
</LinearLayout>
